--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ ext {
     glideVersion = '4.11.0'
     lottieVersion = '3.3.0'
     navigation = '2.2.2'
+    androidXTestCoreVersion = '1.2.0'
+    androidXTestExtKotlinRunnerVersion = '1.1.1'
+    androidXTestRulesVersion = '1.2.0-beta01'
+    robolectricVersion = '4.3-beta-1'
 }
 
 dependencies {
@@ -148,6 +152,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
 
-    // GLIDE
-//    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+
+    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
 }
